Move Most Viewed Pages Macro to livetable #10  * I removed a field form the live table and updated the naming to avoid duplicates